<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".fragments.GameDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorBackground">

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="150dp"
            android:layout_height="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/imageSlider"
            app:srcCompat="@drawable/rectangle_color_dark_purple" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto_thin"
            android:text="@string/game_detail_images"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="@+id/imageView4"
            app:layout_constraintStart_toStartOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto_thin"
            android:text="@string/game_detail_platforms"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="@+id/imageView10"
            app:layout_constraintStart_toStartOf="@+id/imageView10"
            app:layout_constraintTop_toBottomOf="@+id/imageView10" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="150dp"
            android:layout_height="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/tvDescription"
            app:srcCompat="@drawable/rectangle_color_dark_purple" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="150dp"
            android:layout_height="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/rectangle_color_dark_purple" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto_thin"
            android:text="@string/game_detail_description"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:text="@string/large_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@android:color/white"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <com.smarteist.autoimageslider.SliderView
            android:id="@+id/imageSlider"
            android:layout_width="0dp"
            android:layout_height="240dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            app:sliderAnimationDuration="400"
            app:sliderAutoCycleDirection="right"
            app:sliderAutoCycleEnabled="true"
            app:sliderCircularHandlerEnabled="true"
            app:sliderIndicatorAnimationDuration="300"
            app:sliderIndicatorGravity="center_horizontal|bottom"
            app:sliderIndicatorMargin="15dp"
            app:sliderIndicatorOrientation="horizontal"
            app:sliderIndicatorPadding="2dp"
            app:sliderIndicatorRadius="1dp"
            app:sliderIndicatorSelectedColor="@color/colorPrimaryDark"
            app:sliderIndicatorUnselectedColor="@android:color/white"
            app:sliderScrollTimeInSec="5"
            app:sliderStartAutoCycle="true" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/imageView10"
            app:layout_constraintStart_toStartOf="@+id/imageView10"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/tvSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif"
                android:text="@string/game_detail_switch"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/dark_grey"
                app:layout_constraintEnd_toEndOf="@+id/ivSwitch"
                app:layout_constraintStart_toStartOf="@+id/ivSwitch"
                app:layout_constraintTop_toBottomOf="@+id/ivSwitch" />

            <TextView
                android:id="@+id/tvPlaystation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif"
                android:text="@string/game_detail_playstation"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/dark_grey"
                app:layout_constraintEnd_toEndOf="@+id/ivPlaystation"
                app:layout_constraintStart_toStartOf="@+id/ivPlaystation"
                app:layout_constraintTop_toBottomOf="@+id/ivPlaystation" />

            <TextView
                android:id="@+id/tvWindows"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif"
                android:text="@string/game_detail_windows"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/dark_grey"
                app:layout_constraintEnd_toEndOf="@+id/ivWindows"
                app:layout_constraintStart_toStartOf="@+id/ivWindows"
                app:layout_constraintTop_toBottomOf="@+id/ivWindows" />

            <TextView
                android:id="@+id/tvXbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif"
                android:text="@string/game_detail_xbox"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/dark_grey"
                app:layout_constraintEnd_toEndOf="@+id/ivXbox"
                app:layout_constraintStart_toStartOf="@+id/ivXbox"
                app:layout_constraintTop_toBottomOf="@+id/ivXbox" />

            <ImageView
                android:id="@+id/ivSwitch"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="24dp"
                android:background="@drawable/ic_switch_grey"
                android:scaleType="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ivWindows"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="24dp"
                android:background="@drawable/ic_windows_grey"
                app:layout_constraintStart_toEndOf="@+id/ivPlaystation"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ivXbox"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/ic_xbox_grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/ivWindows"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ivPlaystation"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="24dp"
                android:background="@drawable/ic_playstation_grey"
                app:layout_constraintStart_toEndOf="@+id/ivSwitch"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>